# onnxKapok

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  backend.py  common.py  lower.py  main.py  node_sets.py  requirements.txt  sympy_utils.py
.github/workflows/: CodeQL.yml  blank.yml  codeQL.yml
benchmark/: bench_on_android.py  run_bench.py
data/: __init__.py  get_test_data.py
ort_aot/: __init__.py  aot.py  backend.py  codecache.py  codegen_cpu.py  codegen_triton.py  common.py  cpu.py  de_compose.py  execution_planer.py  graph_capture.py  ir.py  logger.py  lower.py  lowering.py  node_sets.py  ort_training_helper.py  scheduling.py  symbolic_shape_infer.py  sympy_utils.py  utils.py
ort_training_mode_test/: test_model_compile.py
template/: CMakeLists.txt  fast_math.h
tools/ci_build/: build.py
